# AIArranger

./: .gitignore  CMakeLists.txt  arranger-engine-spec-v0.9.md  brd-v0.9.md  chord-engine-spec-v0.9.md  data-model-v0.9.md  development-roadmap.md  execution-bundle.md  file-import-strategy-v0.9.md  legal-ip-risk-assessment.md  live-arranger-strategy.md  midi-engine-spec-v0.9.md  performance-latency-requirements.md  prd-v0.9.md  sff1-parser  sound-engine-spec-phase1.md  technical-architecture-v0.9.md  test-sff1-reader  testing-strategy-v0.9.md  uasf-spec-v0.9.md  user-persona-use-case.md  ux-concept.md  ux-wireframes-flows.md
.github/workflows/: ctest.yml
.openclaw/handoff/: GATE7_CLAUDE_HANDOFF.md  GATE7_CLAUDE_PROMPT.md  HANDOFF_MASTER.md
.openclaw/review/: GATE1_CODEX_REVIEW.md  GATE2_CODEX_REVIEW.md  GATE3_CODEX_REVIEW.md  GATE7_CODEX_REVIEW.md  GATE7_MUSICAL_REVIEW.md  GATE8_CODEX_REVIEW.md  GATE_9_MUSICAL_REVIEW.md
apps/macos/: CMakeLists.txt
apps/macos/Source/: ChordPanel.cpp  ChordPanel.h  ConsolePanel.cpp  ConsolePanel.h  DiagnosticsPanel.cpp  DiagnosticsPanel.h  EngineDriver.h  LatencyOverlay.cpp  LatencyOverlay.h  LiveHostComponent.cpp  LiveHostComponent.h  LiveHostDriver.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiOutputPanel.cpp  MidiOutputPanel.h  PerformerOverlayPanel.cpp  PerformerOverlayPanel.h  StageMainComponent.cpp  StageMainComponent.h  StyleBrowserPanel.cpp  StyleBrowserPanel.h  ThemeLookAndFeel.h  TransportPanel.cpp  TransportPanel.h
corpus/yamaha/: TEMPLATE.meta.json
docs/: PROJECT_REVIEW_AND_CONTINUATION_PLAN.md
docs/architecture/: ENGINE_PRODUCT_CONTRACT.md  UASF_FIELD_CONVENTIONS.md  UASF_MIGRATION_POLICY.md  UASF_VERSIONING_POLICY.md
docs/evidence/: gate-6-corpus-validation.md
docs/gate-plans/: GATE3_HARDWARE_VALIDATION_CHECKLIST.md  GATE_10B_HANDOFF.md  GATE_10B_HARDWARE_CHECKLIST.md  GATE_10B_NTT_CALIBRATION.md  GATE_10_HANDOFF.md  GATE_11_HANDOFF.md  GATE_11_PLAN.md  GATE_12_HANDOFF.md  GATE_12_PLAN.md  GATE_13_HANDOFF.md  GATE_13_PLAN.md  GATE_14C_HANDOFF.md  GATE_14C_MANUAL_DAW_VERIFICATION.md  GATE_14C_PLAN.md  GATE_14_HANDOFF.md  GATE_14_PLAN.md  GATE_15_HANDOFF.md  GATE_15_MANUAL_FEEL_REVIEW.md  GATE_15_PLAN.md  GATE_1_REALTIME_TIMING_SPIKE_PLAN.md  GATE_2_MAC_REFERENCE_HOST_PLAN.md  GATE_2_MINIMAL_ARRANGER_SLICE.md  GATE_3_LATENCY_INSTRUMENTATION.md  GATE_3_UASF_V1.md  GATE_7_CASM_SEMANTIC_ANALYSIS.md  GATE_7_HANDOFF.md  GATE_8_NTR_NTT_EXTERNAL_PLAYBACK.md  GATE_9_HANDOFF.md  GATE_9_MANUAL_KORG_CHECKLIST.md  GATE_9_MULTI_PLAYBACK_VALIDATION.md  GATE_9_OPEN_ITEMS.md  IOS_THIN_VERTICAL_SLICE_PLAN.md  MACOS_PLAYABLE_VERIFICATION.md
docs/governance/: COMPATIBILITY_SCORE_POLICY.md  IMPORTER_GOLDEN_CORPUS_POLICY.md  MUSICAL_REVIEW_TEMPLATE.md  PR_REVIEW_POLICY.md
docs/implementation/: AI_ARRANGER_MASTER_DELIVERY_PLAN.md  GATE_4_YAMAHA_SFF1_RESEARCH_PLAN.md
docs/importers/: casm-structure-notes.md  sff1-importer-architecture.md  sff1-legal-interop-note.md  sff1-megavoice-strategy.md  sff1-structure-notes.md  sff1-unsupported-features.md
docs/policy/: CLAIMS_AND_RELEASE_NOTES_POLICY.md
docs/strategy/: KORG_FIRST_VALIDATION_STRATEGY.md
fixtures/korg/: README.md
include/aiarranger/: aiarranger_engine.h
scripts/: run_tests.sh
src/bridge/: aiarranger_bridge.cpp
src/control/: engine_bridge.h  engine_midi_route.h  midi_output_bridge.h  ui_event_queue.h
src/engine/midi/: panic.h  (+9 more)
src/midi/: midi_device_manager.cpp  midi_device_manager.h  midi_input_parser.cpp  midi_input_parser.h  midi_input_router.h  midi_input_source.h  midi_output_manager.cpp  midi_output_manager.h  midi_output_provider.h
src/session/: engine_contract.h  engine_lifecycle.cpp  engine_lifecycle.h  engine_session.cpp  engine_session.h  engine_snapshot.h  live_engine_facade.cpp  live_engine_facade.h  session_persistence.cpp  session_persistence.h  snapshot_manager.cpp  snapshot_manager.h
src/ui/: chord_view_model.cpp  chord_view_model.h  diagnostics_view_model.h  latency_monitor.h  transport_view_model.h
tests/bridge/: test_bridge_roundtrip.cpp
tests/engine/: test_articulation_renderer.cpp  test_casm_uasf_mapping_edge_cases.cpp  test_chord_input.cpp  test_clock.cpp  test_coremidi_out.cpp  test_corpus_split_validation.cpp  test_deserializer.cpp  test_groove.cpp  test_guitar_megavoice.cpp  test_latency_stability.cpp  test_ntt.cpp  test_panic.cpp  test_per_channel_split.cpp  test_playback_validation.cpp  test_scheduler.cpp  test_section_sequencer.cpp  test_serializer.cpp  test_sff1_load_and_play_e2e.cpp  test_sff1_reader.cpp  test_sty_to_uasf_roundtrip.cpp  test_style_player.cpp  test_timing_benchmark.cpp  test_validator.cpp
tests/integration/: test_chord_control_event.cpp  test_engine_bridge_async.cpp  test_engine_session_lifecycle.cpp  test_latency_monitor.cpp  test_midi_device_manager_synthetic.cpp  test_midi_input_to_chord.cpp  test_snapshot_manager.cpp
tests/midi/: fake_midi_input_source.h  fake_midi_output_provider.h  test_engine_midi_route.cpp  test_live_engine_facade.cpp  test_live_engine_facade_transport.cpp  test_midi_input_parser.cpp  test_midi_output_bridge.cpp  test_midi_output_failure.cpp  test_midi_output_manager.cpp  test_midi_output_provider.cpp  test_midi_output_viewmodel.cpp
tools/: build_casm.py  korg_playback_cli.cpp  sff1_parser_cli.cpp
tools/korg_validation/: CMakeLists.txt  korg_validate_cli.cpp
tools/korg_validation/include/korg_validation/: harness.h  jitter_benchmark.h  latency_meter.h  midi_capture.h  reporter.h  stuck_note_detector.h  timing_analyzer.h  transition_validator.h
tools/korg_validation/sample_report/: report.json  report.md
tools/korg_validation/src/: harness.cpp  jitter_benchmark.cpp  latency_meter.cpp  midi_capture.cpp  reporter.cpp  stuck_note_detector.cpp  timing_analyzer.cpp  transition_validator.cpp
tools/korg_validation/tests/: test_fixtures.cpp  test_harness_scaffold.cpp  test_midi_capture.cpp  test_reporter.cpp  test_stuck_jitter.cpp  test_timing_analyzer.cpp  test_transition_latency.cpp
tools/korg_validation/tests/fixtures/synthetic/: two_bar_engine.csv  two_bar_reference.csv
(+147 files in other folders)
